# fgm

./: .gitallowed  .gitignore  Cargo.toml  README.md  SECURITY.md
ai-rules/: asp.md  incident-remediations.md
docs/plans/: 2026-03-02-cli-help-status-v1.3.2.md  2026-03-02-llm-first-export-and-rate-limit.md  2026-03-02-low-rate-performance-and-caching.md
docs/security/: ai-safety-policy.md  asp-preflight-checklist.md
docs/superpowers/plans/: 2026-03-30-cli-evolution.md
docs/superpowers/specs/: 2026-03-30-cli-evolution-design.md
research/session-logs/: 2026-03-02-1749-dcp-session-log.md  2026-03-02-1802-dcp-session-log.md  2026-03-02-1825-dcp-session-log.md
scripts/automation/: install-asp-hooks.sh
scripts/utilities/: asp-preflight.sh
src/: auth.rs  cli.rs  config.rs  main.rs  output.rs  project.rs  reporting.rs  select.rs  watch.rs
src/api/: cache.rs  client.rs  files.rs  images.rs  mod.rs  rate_limit.rs  types.rs  url.rs
src/commands/: auth.rs  cache.rs  compare.rs  compare_url.rs  components.rs  config.rs  doctor.rs  export.rs  files.rs  init.rs  map.rs  mod.rs  preview.rs  run.rs  snapshot.rs  sync.rs  tokens.rs
